tests/ui/suggestions/issue-99240-2.rs
enum Enum {
    Unit,
}
type Alias = Enum;

fn main() {
    Alias::
    Unit();
    //~^^ ERROR expected function, found enum variant `Alias::Unit`
}
